# forge

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: SAFETY.md  SHAKE-OUT-direct.md  SHAKE-OUT-workflow.json  SHAKE-OUT.md  V021-AUDIT.json  W4-DOGFOOD-REPORT.json  W4-DOGFOOD.md  index.md  quickstart.md
docs/eval/: dataset.jsonl  index.md  plot.py  report.md  results.csv  run.py
docs/eval/runs/: ambig-01.json  ambig-02.json  code-01.json  code-02.json  code-03.json  code-04.json  code-05.json  data-01.json  data-02.json  data-03.json  data-04.json  edit-01.json  edit-02.json  edit-03.json  edit-04.json  fs-01.json  fs-02.json  fs-03.json  fs-04.json  fs-05.json  log-01.json  log-02.json  log-03.json  multi-01.json  multi-02.json  null-01.json  null-02.json  null-03.json  safety-01.json  safety-02.json
docs/eval/workspace/data/: config.json  notes.md
docs/eval/workspace/project/: README.md
docs/eval/workspace/project/docs/: design.md
docs/eval/workspace/project/src/pkg/: __init__.py  math_ops.py  strings.py
docs/eval/workspace/project/tests/: test_math_ops.py  test_strings.py
examples/: README.md  sample-config.toml
examples/codebase-tour/: README.md
examples/daily-standup/: README.md  daemon.toml
examples/triage-inbox/: README.md  daemon.toml
scripts/: release.sh
skills/changelog-from-git/: SKILL.md  helpers.py
skills/project-stats/: SKILL.md  helpers.py
skills/tidy-imports/: SKILL.md  helpers.py
src/forge/: __init__.py  _subprocess_env.py  audit.py  cli.py  config.py  daemon.py  errors.py  gate.py  installer.py  kernel.py  log.py  mcp.py  permissions.py  preview.py  providers.py  repl.py  router.py  sandbox.py  session.py  shadow.py  skills.py  system_prompt.md  tools.py
tests/: conftest.py  test_cli.py  test_config.py  test_daemon.py  test_dry_run.py  test_gate.py  test_installer.py  test_kernel.py  test_log_and_errors.py  test_mcp.py  test_permissions.py  test_preview.py  test_pricing_and_plan.py  test_router_providers.py  test_sandbox.py  test_security_fixes.py  test_session.py  test_shadow.py  test_skills.py  test_streaming.py  test_tools.py  test_vision.py  test_w4_fixups.py
