[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forge-agent"
version = "0.1.0"
description = "Code-first local agent with skills, multi-provider routing, and trust-mode safety rails."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Forge contributors" }]
keywords = ["agent", "ai", "llm", "ollama", "gpt-oss", "skills", "local-first"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
]
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "rich>=13.7",
    "typer>=0.12",
    "openai>=1.30",          # LiteLLM-compatible client; talks to Ollama via /v1
    "jupyter-client>=8.6",
    "ipykernel>=6.29",
    "httpx>=0.27",
    "tomli-w>=1.0",          # writing ~/.forge/permissions.toml
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
forge = "forge.cli:app"

[project.urls]
Documentation = "https://github.com/forge-agent/forge#readme"
Repository = "https://github.com/forge-agent/forge"

[tool.hatch.build.targets.wheel]
packages = ["src/forge"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "PT"]
ignore = [
    "S101",  # assert in tests
    "S603",  # subprocess with shell=False is fine for our purposes
    "S607",  # partial-path executable in subprocess (we whitelist)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short --strict-markers"
markers = [
    "slow: tests that talk to a real Ollama instance",
    "integration: end-to-end tests",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/forge"]
branch = true
