[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forge-agent"
version = "0.2.3"
description = "Code-first local agent with skills, multi-provider routing, sandbox safety, and trust-mode rails."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Rohan Tiwari" }]
maintainers = [{ name = "Rohan Tiwari" }]
keywords = ["agent", "ai", "llm", "ollama", "gpt-oss", "skills", "local-first", "sandbox"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "rich>=13.7",
    "typer>=0.12",
    "openai>=1.30",          # LiteLLM-compatible client; talks to Ollama via /v1
    "anthropic>=0.40",       # native Anthropic SDK for the escalation chain
    "jupyter-client>=8.6",
    "ipykernel>=6.29",
    "httpx>=0.27",
    "tomli-w>=1.0",          # writing ~/.forge/permissions.toml
    "prompt_toolkit>=3.0",   # multi-line chat REPL with history + completion
    "watchdog>=4.0",         # filesystem event watching for forge daemon
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "pytest-timeout>=2.4",
    "ruff>=0.6",
    "mypy>=1.10",
    "build>=1.0",
    "twine>=5.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
]

[project.scripts]
forge = "forge.cli:app"

[project.urls]
Homepage = "https://github.com/Rohan-Tiwari/forge"
Repository = "https://github.com/Rohan-Tiwari/forge"
Documentation = "https://github.com/Rohan-Tiwari/forge#readme"
Issues = "https://github.com/Rohan-Tiwari/forge/issues"
Changelog = "https://github.com/Rohan-Tiwari/forge/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/forge"]

[tool.hatch.build.targets.wheel.shared-data]
"src/forge/py.typed" = "forge/py.typed"

[tool.hatch.build.targets.sdist]
include = [
    "src/forge/**/*.py",
    "src/forge/**/*.md",
    "src/forge/py.typed",
    "tests/**/*.py",
    "examples/**",
    "skills/**",
    "docs/SAFETY.md",
    "docs/W4-DOGFOOD.md",
    "docs/V021-AUDIT.json",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "SECURITY.md",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "PT"]
ignore = [
    "S101",   # assert in tests
    "S603",   # subprocess with shell=False is fine for our purposes
    "S607",   # partial-path executable in subprocess (we whitelist)
    "S110",   # try/except/pass — we deliberately swallow errors at boundaries
    "S310",   # urllib in GitHub API + Ollama clients — known + bounded
    "E501",   # long lines — we have a 100-char limit but allow it for URLs/comments
    "B008",   # function call in default arg — typer.Option idiom requires it
    "B904",   # raise-from-inside-except — fix where appropriate, not blanket
    "N802",   # Read/Write/Edit/Bash are intentionally capitalized (model API)
    "N806",   # same — kernel globals are PascalCase by design
    "N818",   # error suffix — our hierarchy uses ProtectedPathError style
    "E731",   # lambda assignment — used for stub callbacks in tools.py
    "F841",   # unused variables — intentional in some test stubs
    "PT011",  # pytest.raises(Exception) — fine for tests of "any error"
    "PT018",  # composite assertion — fine for clarity
    "F821",   # undefined name — false positive in __all__ exports
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "B007", "PT006"]
"src/forge/errors.py" = ["F401"]      # re-exports trigger unused-import
"src/forge/__init__.py" = ["F401"]    # public API surface
"examples/**" = ["S"]                  # examples don't need security lints

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short --strict-markers"
markers = [
    "slow: tests that talk to a real Ollama instance",
    "integration: end-to-end tests",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/forge"]
branch = true
